Try to work around z-index bug on ipads

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,11 @@ $max-width: 960px;
   margin: 0;
 }
 
+.container-fluid.d-xxl-flex {
+  // Try to work around ipad z-index bug
+  z-index: 1;
+}
+
 #header {
   width: $max-width;
   margin: 0 auto;
@@ -145,6 +150,9 @@ $max-width: 960px;
   font: 12px sans-serif;
   background: $background-grey;
   border: 1px #999 solid;
+
+  // Try to work around ipad z-index bug
+  z-index: 100;
 
   h3 {
     font-size: 1.5em;
